--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@syncfusion/ej2-react-navigations": "^30.1.37",
     "@syncfusion/ej2-react-splitbuttons": "^30.1.37",
     "appwrite": "^18.1.1",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-router": "^7.5.3",
     "tailwind-merge": "^3.3.1"
   },
